# img-to-webp

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: build-and-test.yml  build-test-release.yml
src/img_to_webp/: __init__.py  _cli.py  _config.py  _exceptions.py  _image_processor.py  _main.py  _models.py
tests/: base_test.py  test_cli.py  test_config.py  test_image_processor.py  test_main.py  test_resize_strategies.py
