[project]
name = "img-to-webp"
version = "0.1.0"
description = "A Python package that provides a command-line interface (CLI) for converting images to the WebP format. It supports various image formats and allows for resizing images based on predefined rules."
readme = "README.md"
requires-python = "<4.0,>=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0.0,<7.0.0",
    "pillow<12.0.0,>=11.0.0",
]

[project.urls]
Homepage = "https://github.com/nipunchamikara/img-to-webp"
Issues = "https://github.com/nipunchamikara/img-to-webp/issues"

[project.scripts]
img-to-webp = "img_to_webp:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "parameterized>=0.9.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
lint = [
    "ruff>=0.11.2",
]
build = [
    "setuptools>=61",
]
